--- a/webpack/less/blog.less
+++ b/webpack/less/blog.less
@@ -1,6 +1,6 @@
 @import "_variables";
 
-.blog article {
+.blog-preview {
     h2 {
         margin-bottom: 0;
     }
@@ -10,6 +10,7 @@
     }
 }
 
+.blog-preview,
 .blog main,
 .blog-post article {
     time {
