Add font-awesome to the webpack setup

--- a/webpack/less/main.less
+++ b/webpack/less/main.less
@@ -2,6 +2,7 @@
 @import "_grid";
 @import "_variables";
 @import (less) "pygments-default.css";
+@import (less) "~font-awesome/css/font-awesome.css";
 
 // General Element Styling
 //==============================================================================
