--- a/webpack/less/presentation.less
+++ b/webpack/less/presentation.less
@@ -1,2 +1,3 @@
+@import (less) "~font-awesome/css/font-awesome.css";
 @import (less) "~reveal.js/css/reveal.css";
 @import (less) "~reveal.js/css/theme/white.css";
