--- a/webpack/less/index.less
+++ b/webpack/less/index.less
@@ -1,5 +1,43 @@
-#twitter-widget-0 {
-    display: block !important;
-    margin: 10px auto !important;
-    position: initial !important;
+.home-widgets {
+    section {
+        .column(6);
+
+        &:first-child {
+            margin-left: 0;
+        }
+
+        @media @mobile {
+            .column(12);
+        }
+
+        h3 {
+            margin-bottom: 0;
+        }
+
+        #twitter-widget-0 {
+            height: 600px !important;
+            width: 100% !important;
+
+            .timeline-Header {
+                padding-left: 0 !important;
+            }
+
+            a,
+            a:visited {
+                color: @linkColor !important;
+            }
+        }
+    }
+
+    .last-fm {
+        a {
+            &:hover {
+                border-bottom: none;
+            }
+
+            img {
+                max-height: 600px;
+            }
+        }
+    }
 }
