--- a/webpack/less/presentation.less
+++ b/webpack/less/presentation.less
@@ -1,3 +1,13 @@
 @import (less) "~font-awesome/css/font-awesome.css";
 @import (less) "~reveal.js/css/reveal.css";
 @import (less) "~reveal.js/css/theme/white.css";
+
+twitterwidget {
+    margin: 0 auto;
+}
+
+.reveal {
+    .respect-case {
+        text-transform: none;
+    }
+}
