Finish the slides.

--- a/webpack/less/presentation.less
+++ b/webpack/less/presentation.less
@@ -10,4 +10,9 @@ twitterwidget {
     .respect-case {
         text-transform: none;
     }
+
+    .no-border {
+        border: none;
+        box-shadow: none;
+    }
 }
