--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,16 +5,20 @@
     <title>{% block title %}Welcome{% endblock %} — Eli Gundry</title>
     <meta name="description" content="{{ this.description or bag('author').site_description }}">
     {% include 'includes/meta.html' %}
-    {% block stylesheets %}{% include 'includes/stylesheets.html' %}{% endblock %}
+    {% block stylesheets %}
+      <link rel="stylesheet" href="{{ '/static/gen/styles.css'|asseturl }}">
+    {% endblock %}
   </head>
   <body id="{{ this.path }}" class="{{ this._model }}" itemscope itemtype="https://schema.org/Person">
     {% block header %}
       {% include 'includes/header.html' %}
     {% endblock %}
 
-    <main role="main">
-      {% block body %}{% endblock %}
-    </main>
+    {% block outer_body %}
+      <main role="main">
+        {% block body %}{% endblock %}
+      </main>
+    {% endblock %}
 
     {% block footer %}
       {% include 'includes/footer.html' %}
