--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -3,11 +3,10 @@
     {% for class_, data in bag('contact').iteritems() %}
       <div class="{{ class_ }}" {% if data.itemtype %}itemscope itemtype="{{ data.itemtype }}{% endif %}">
         <i class="fa fa-{{ data.fa }}" title="{{ data.title }}"></i>
+        <div class="items">
           {% if data.elements -%}
             {% set link_wrap = data.href %}
-            {% if link_wrap %}
-              <a href="{{ data.href}}" itemprop="url">
-            {% endif %}
+            {% if link_wrap %}<a href="{{ data.href}}" itemprop="url">{% endif %}
 
             {% for item in data.elements -%}
                 {% if item.href %}
@@ -21,9 +20,7 @@
                 {% endif %}
             {% endfor %}
 
-            {% if link_wrap %}
-              </a>
-            {% endif %}
+            {% if link_wrap %}</a>{% endif %}
 
           {% else %}
             <a href="{{ data.href }}">
@@ -32,6 +29,7 @@
               </span>
             </a>
           {% endif %}
+        </div>
       </div>
     {% endfor %}
   </address>
