--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,12 +1,12 @@
 <footer class="footer" role="contentinfo">
   <address>
-    {% for class_, data in bag('contact').iteritems() %}
+    {%- for class_, data in bag('contact').iteritems() %}
       <div class="{{ class_ }}" {% if data.itemtype %}itemscope itemtype="{{ data.itemtype }}{% endif %}">
         <i class="fa fa-{{ data.fa }}" title="{{ data.title }}"></i>
         <div class="items">
           {% if data.elements -%}
-            {% set link_wrap = data.href %}
-            {% if link_wrap %}<a href="{{ data.href}}" itemprop="url">{% endif %}
+            {%- set link_wrap = data.href %}
+            {%- if link_wrap %}<a href="{{ data.href}}" itemprop="url">{% endif %}
 
             {% for item in data.elements -%}
                 {% if item.href %}
@@ -31,6 +31,6 @@
           {% endif %}
         </div>
       </div>
-    {% endfor %}
+    {%- endfor %}
   </address>
 </footer>
