--- a/templates/macros/pagination.html
+++ b/templates/macros/pagination.html
@@ -1,15 +1,15 @@
 {% macro render_pagination(pagination) %}
   <div class="pagination">
-    {% if pagination.has_prev %}
+    {%- if pagination.has_prev %}
       <a href="{{ pagination.prev|url }}">&laquo; Previous</a>
-    {% else %}
+    {%- else %}
       <span class="disabled">&laquo; Previous</span>
-    {% endif %}
+    {%- endif %}
     | {{ pagination.page }} |
-    {% if pagination.has_next %}
+    {%- if pagination.has_next %}
       <a href="{{ pagination.next|url }}">Next &raquo;</a>
-    {% else %}
+    {%- else %}
       <span class="disabled">Next &raquo;</span>
-    {% endif %}
+    {%- endif %}
   </div>
 {% endmacro %}
