--- a/webpack/less/about.less
+++ b/webpack/less/about.less
@@ -2,5 +2,18 @@
 @import "_variables";
 
 [id*='/about'] main {
+    .headshot,
+    .headshot img {
+        max-height: 550px;
 
+        @media @mobile {
+            max-height: inherit;
+            width: 100%;
+            padding-left: 0;
+        }
+    }
+
+    .headshot {
+        margin-bottom: 2em;
+    }
 }
