Add location to jobs and education on the resume

--- a/webpack/less/resume.less
+++ b/webpack/less/resume.less
@@ -31,6 +31,11 @@
     h4 {
         font-size: .9em;
         margin: 0;
+
+        address {
+            font-style: normal;
+            float: right;
+        }
     }
 
     .resume-action {
