--- a/webpack/less/resume.less
+++ b/webpack/less/resume.less
@@ -9,7 +9,6 @@
             border-bottom: @divider;
             content: ' ';
             display: block;
-            margin-top: -6px;
             width: 100%;
         }
     }
@@ -19,7 +18,7 @@
     }
 
     h3 {
-        margin-bottom: -4px;
+        margin-bottom: 0;
         margin-top: .5em;
 
         sup {
@@ -35,6 +34,14 @@
         address {
             font-style: normal;
             float: right;
+        }
+    }
+
+    ul {
+        margin: .4em 0;
+
+        li {
+            margin-bottom: .25em;
         }
     }
 
