More style changes

--- a/webpack/less/_variables.less
+++ b/webpack/less/_variables.less
@@ -13,6 +13,7 @@
 //==============================================================================
 
 @defaultFontSize: 20px;
+@defaultLineHeight: 1.3em;
 @sansFontFamily: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 @sansFontWeight: 300;
 @serifFontFamily: Georgia, serif;
