--- a/webpack/less/print.less
+++ b/webpack/less/print.less
@@ -19,6 +19,14 @@
         display: none;
     }
 
+    ul, ol {
+        line-height: 1em;
+    }
+
+    p {
+        line-height: 1em;
+    }
+
     .print-show {
         visibility: visible;
     }
