--- a/webpack/less/main.less
+++ b/webpack/less/main.less
@@ -18,6 +18,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
     font-family: @sansFontFamily;
+    margin: .25em 0;
 }
 
 img {
@@ -45,6 +46,10 @@ main {
     .clearfix();
 }
 
+p {
+    line-height: @defaultLineHeight;
+}
+
 hr {
     border-top: @divider;
     margin: 1em auto;
@@ -70,6 +75,7 @@ ul {
 
 ul,
 ol {
+    line-height: @defaultLineHeight;
     padding-left: 1em;
 
     ul,
