Disable main.js being reloaded on each turbolinks page change

--- a/templates/includes/scripts.html
+++ b/templates/includes/scripts.html
@@ -1,2 +1,2 @@
-<script src="{{ '/static/gen/app.js'|asseturl }}"></script>
+<script src="{{ '/static/gen/app.js'|asseturl }}" data-turbolinks-eval=false></script>
 {{ generate_google_analytics() }}
