--- a/webpack/less/about.less
+++ b/webpack/less/about.less
@@ -1,7 +1,7 @@
 @import "_grid";
 @import "_variables";
 
-[id*='/about'] main {
+#about main {
     .headshot,
     .headshot img {
         max-height: 550px;
