--- a/webpack/less/print.less
+++ b/webpack/less/print.less
@@ -36,7 +36,7 @@
         display: none;
     }
 
-    [id*='/resume'] {
+    #resume {
         main {
             h2 {
                 display: block;
