Add a basic nav and make the feelings page parseable

--- a/gatsby/src/layout/index.css
+++ b/gatsby/src/layout/index.css
@@ -21,6 +21,6 @@ body {
 .layout-container {
   min-height: 100vh;
   min-width: 100vw;
-  display: flex;
+  /* display: flex; */
   padding: 20px;
 }
