--- a/gatsby/src/layout/index.css
+++ b/gatsby/src/layout/index.css
@@ -19,10 +19,12 @@ body {
 }
 
 .layout-container {
-  min-height: 100vh;
-  min-width: 100vw;
+  /* min-height: 100vh; */
+  /* min-width: 100vw; */
   /* display: flex; */
-  padding: 20px;
+  /* padding: 20px; */
+  width: 80%;
+  margin: 0 auto;
 }
 
 img {
