Setup a base Rust API with a nifty Docker setup

--- a/docker/eligundry.localhost.ssl.conf.erb
+++ b/docker/eligundry.localhost.ssl.conf.erb
@@ -45,4 +45,8 @@ server {
     location /api {
         proxy_pass http://api:8080;
     }
+
+    location /rust-api {
+        proxy_pass http://rust-api:8001;
+    }
 }
