--- a/docker/eligundry.localhost.ssl.conf.erb
+++ b/docker/eligundry.localhost.ssl.conf.erb
@@ -11,6 +11,36 @@ server {
     ssl_ciphers ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA:ECDHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA;
     ssl_prefer_server_ciphers on;
     ssl_dhparam <%= dhparam_path %>;
+    <% if ENV['TEST_CDN'] && ENV['TEST_CDN'].downcase == 'true' %>
+
+    location / {
+        resolver 1.1.1.1 [::1]:5353 valid=30s;
+        set $cdn_url "https://cdn.eligundry.com/site/";
+        proxy_pass $cdn_url;
+        proxy_set_header Host "cdn.eligundry.com";
+        proxy_ssl_server_name on;
+        # proxy_hide_header Strict-Transport-Security;
+    }
+
+    location = / {
+        resolver 1.1.1.1 [::1]:5353 valid=30s;
+        set $cdn_url "https://cdn.eligundry.com/site/";
+        proxy_pass $cdn_url/index.html;
+        proxy_set_header Host "cdn.eligundry.com";
+        proxy_ssl_server_name on;
+        # proxy_hide_header Strict-Transport-Security;
+    }
+
+    location ~ /(?<req_path>.+) {
+        resolver 1.1.1.1 [::1]:5353 valid=30s;
+        set $cdn_url "https://cdn.eligundry.com/site/";
+        proxy_pass $cdn_url/$req_path/index.html;
+        proxy_set_header Host "cdn.eligundry.com";
+        proxy_ssl_server_name on;
+        # proxy_hide_header Strict-Transport-Security;
+    }
+
+    <% else %>
 
     location / {
         <% if ENV['DYNAMIC_UPSTREAM'] && ENV['DYNAMIC_UPSTREAM'].downcase == 'true' %>
@@ -32,15 +62,7 @@ server {
         <% end %>
     }
 
-    location = /img/last.fm.jpg {
-        proxy_cache lastfm_image_cache;
-        proxy_cache_valid 200 24h;
-        proxy_cache_key "lastfm_eli_pwnd";
-        proxy_pass "http://www.tapmusic.net/collage.php?user=eli_pwnd&type=7day&size=3x3";
-        proxy_set_header Host "www.tapmusic.net";
-        expires 24h;
-        add_header Cache-Control "public";
-    }
+    <% end %>
 
     location /api {
         proxy_pass http://api:8080;
