--- a/gatsby/src/layout/prism-material.scss
+++ b/gatsby/src/layout/prism-material.scss
@@ -208,25 +208,8 @@ pre[class*="language-"] {
 .dark {
 	code[class*="language-"],
 	pre[class*="language-"] {
-		text-align: left;
-		white-space: pre;
-		word-spacing: normal;
-		word-break: normal;
-		word-wrap: normal;
 		color: #eee;
 		background: #2f2f2f;
-		font-family: Roboto Mono, monospace;
-		font-size: 1em;
-		line-height: 1.5em;
-
-		-moz-tab-size: 4;
-		-o-tab-size: 4;
-		tab-size: 4;
-
-		-webkit-hyphens: none;
-		-moz-hyphens: none;
-		-ms-hyphens: none;
-		hyphens: none;
 	}
 
 	code[class*="language-"]::-moz-selection,
@@ -234,6 +217,7 @@ pre[class*="language-"] {
 	code[class*="language-"] ::-moz-selection,
 	pre[class*="language-"] ::-moz-selection {
 		background: #363636;
+		color: #cceae7;
 	}
 
 	code[class*="language-"]::selection,
@@ -241,29 +225,13 @@ pre[class*="language-"] {
 	code[class*="language-"] ::selection,
 	pre[class*="language-"] ::selection {
 		background: #363636;
-	}
-
-	:not(pre) > code[class*="language-"] {
-		white-space: normal;
-		border-radius: 0.2em;
-		padding: 0.1em;
-	}
-
-	pre[class*="language-"] {
-		overflow: auto;
-		position: relative;
-		margin: 0.5em 0;
-		padding: 1.25em 1em;
+		color: #cceae7;
 	}
 
 	.language-css > code,
 	.language-sass > code,
 	.language-scss > code {
 		color: #fd9170;
-	}
-
-	[class*="language-"] .namespace {
-		opacity: 0.7;
 	}
 
 	.token.atrule {
