--- a/astro/src/components/Head.astro
+++ b/astro/src/components/Head.astro
@@ -1,24 +1,26 @@
 ---
+import daylio from '@lib/daylio.ts'
 import '../styles/fonts.css';
 import '../styles/global.scss';
 import '../styles/prism-material.scss';
 
 export interface Props {
-	title: string;
+	title?: string;
 	description: string;
 	image?: string;
 	type?: string;
 	next?: string;
 	prev?: string;
-	canonicalURL?: string | URL;
+	path?: string;
 }
 
-const { title, description, image, type, next, prev, canonicalURL } = Astro.props as Props;
+const { title, description, image, type, next, prev, path } = Astro.props as Props;
+const faviconEmoji = await daylio.getFaviconEmoji()
 ---
 
 <!-- Common -->
 <meta charset="UTF-8" />
-<title>{title}</title>
+<title>{title ? `${title} | Eli Gundry` : 'Eli Gundry'}</title>
 <meta name="description" content={description} />
 <!-- Sitemap -->
 <link rel="sitemap" href="/sitemap.xml" />
@@ -26,10 +28,10 @@ const { title, description, image, type, next, prev, canonicalURL } = Astro.prop
 <link rel="alternate" type="application/rss+xml" href="/feed/posts.xml" />
 
 <!-- Favicon -->
-<link rel="icon" type="image/x-icon" href="/favicon.ico" />
+<link rel="icon" href={`data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>${faviconEmoji}</text></svg>`} />
 
 <!-- SEO -->
-<link rel="canonical" href={canonicalURL} />
+<link rel="canonical" href={'https://eligundry.com' + path ?? ''} />
 {next && <link rel="next" aria-label="Previous Page" href={new URL(next, canonicalURL).href}>}
 {prev && <link rel="prev" aria-label="Next Page" href={new URL(prev, canonicalURL).href}>}
 
