--- a/astro/src/components/Reading/Book.astro
+++ b/astro/src/components/Reading/Book.astro
@@ -1,4 +1,5 @@
 ---
+import { Picture } from 'astro-imagetools/components'
 import type { GoodReadsBook } from '@lib/goodreads'
 export type Props = GoodReadsBook & {
   shelf: 'current' | 'read'
@@ -26,7 +27,7 @@ if (author) {
   target="_blank"
   rel="noopener noreferrer"
 >
-  <img
+  <Picture
     src={cover}
     alt={`${title} - ${correctAuthor}`}
     width={128}
