--- a/astro/src/pages/index.astro
+++ b/astro/src/pages/index.astro
@@ -5,6 +5,9 @@ import EmojiText from '@components/Shared/EmojiText.astro';
 import Paper from '@components/Shared/Paper.astro';
 import GoodreadsShelf from '@components/Reading/Shelf.astro'
 import LastFMCover from '@components/Listening/LastFMCover.astro'
+import GitHubCalendar from '@components/GitHubCalendar.astro'
+
+console.log('')
 ---
 
 <MainLayout>
@@ -38,6 +41,32 @@ import LastFMCover from '@components/Listening/LastFMCover.astro'
         working the entire time before deciding to go pro!
       </li>
     </ul>
+  </Paper>
+  <Paper Element="section">
+    <h2>How I'm Feeling</h2>
+    <p class="summary">
+      A while ago, I decided to start journaling my feelings. Being a
+      software engineer,{' '}
+      <a href="/blog/feelings-api">
+        I made an API out of it and put it on my website
+      </a>
+      . The favicon for the site the emoji for my latest entry.
+    </p>
+  </Paper>
+  <Paper Element="section">
+    <h2>Do You Code?</h2>
+    <p className="summary">
+      I make a living developing web applications. I jump all around the
+      stack and will do whatever it takes to ship. Need me to do some devops
+      to get this feature out? I gotcha. Some CSS is making a button look
+      bad? I'll do my best. A query running to slow? Stop, I can't deal with
+      all this excitement.
+    </p>
+    <p>
+      GitHub contribution calendars are not a good indicator of whether or
+      not someone is a good developer, but they are very pretty.
+    </p>
+    <!-- <GitHubCalendar client:loaded /> -->
   </Paper>
   <Paper Element="section">
     <h2>What I'm Reading</h2>
