Giving up on this stupid framework for a bit

--- a/astro/src/layouts/main.astro
+++ b/astro/src/layouts/main.astro
@@ -1,4 +1,13 @@
 ---
+/* import { */
+/*   FaGithubSquare, */
+/*   FaTwitterSquare, */
+/*   FaEnvelopeSquare, */
+/*   FaRssSquare, */
+/*   FaLinkedin, */
+/*   FaLastfmSquare, */
+/* } from 'react-icons/fa' */
+
 const navLinks = {
   '/': {
     title: 'Home',
@@ -26,6 +35,51 @@ const navLinks = {
     emojiLabel: 'piece of paper representing my resume',
   },
 }
+
+const socialLinks = Object.freeze([
+  {
+    name: 'github',
+    label: 'Review my code on GitHub',
+    url: 'https://github.com/eligundry',
+    /* icon: <FaGithubSquare />, */
+    itemProp: 'sameAs',
+  },
+  {
+    name: 'twitter',
+    label: 'Follow me on Twitter',
+    url: 'https://twitter.com/EliGundry',
+    /* icon: <FaTwitterSquare />, */
+    itemProp: 'sameAs',
+  },
+  {
+    name: 'linkedin',
+    label: 'Add me to your professional network on LinkedIn',
+    url: 'https://www.linkedin.com/in/eligundry/',
+    /* icon: <FaLinkedin />, */
+    itemProp: 'sameAs',
+  },
+  {
+    name: 'lastfm',
+    label: "See what I'm listening to on Last.fm",
+    url: 'https://www.last.fm/user/eli_pwnd',
+    /* icon: <FaLastfmSquare />, */
+    itemProp: 'sameAs',
+  },
+  {
+    name: 'email',
+    label: 'Shoot me an email',
+    url: 'mailto:eligundry@gmail.com',
+    /* icon: <FaEnvelopeSquare />, */
+    itemProp: undefined,
+  },
+  {
+    name: 'rss',
+    label: 'Add my blog to your Google Reader via RSS',
+    url: '/blog.rss',
+    /* icon: <FaRssSquare />, */
+    itemProp: undefined,
+  },
+])
 ---
 <html lang="en">
   <head>
