Update UserLinks to no longer use styled-components

--- a/next/components/Layout/FancyBackground.module.scss
+++ b/next/components/Layout/FancyBackground.module.scss
@@ -25,4 +25,5 @@
   z-index: 10;
 
   @apply fixed bottom-4 right-4 rounded-full bg-primary hover:bg-primaryLite text-white p-4 sm:text-base sm:p-2 print:hidden;
+  @apply transition duration-200 ease-linear transition-colors;
 }
