Fix dark mode and remove styled-components from a bunch of shared components

--- a/next/components/Layout/Footer/index.module.scss
+++ b/next/components/Layout/Footer/index.module.scss
@@ -1,5 +1,9 @@
 .footer {
-  @apply bg-white dark:bg-typographyDark shadow print:hidden;
+  @apply bg-white shadow print:hidden;
+
+  :global(body.dark) & {
+    @apply bg-typographyDark;
+  }
 }
 
 .container {
