--- a/next/components/Shared/Paper.module.scss
+++ b/next/components/Shared/Paper.module.scss
@@ -1,12 +1,20 @@
 .paper {
-  @apply w-full p-4 px-4 text-xl text-typography dark:text-white leading-normal rounded-lg bg-paper dark:bg-paperDark mb-4 print:mb-0;
+  @apply w-full p-4 px-4 text-xl text-typography leading-normal rounded-lg bg-paper mb-4 print:mb-0;
 
  body[data-fancy-background=""] & {
    @apply shadow-none;
  }
 
   @media (prefers-reduced-transparency: reduce) {
-    @apply bg-siteBackground dark:bg-black;
+    @apply bg-siteBackground;
+
+    :global(body.dark) & {
+      @apply bg-black;
+    }
+  }
+
+  :global(body.dark) & {
+    @apply text-white bg-paperDark;
   }
 }
 
@@ -15,7 +23,11 @@
 }
 
 .transparent {
-  @apply bg-transparent dark:bg-transparent shadow-none;
+  @apply bg-transparent shadow-none;
+
+  :global(body.dark) & {
+    @apply bg-transparent;
+  }
 }
 
 .noPadding {
