--- a/next/components/Layout/Header/index.module.scss
+++ b/next/components/Layout/Header/index.module.scss
@@ -1,5 +1,9 @@
 .header {
-  @apply fixed print:relative w-full z-10 top-0 sm:bg-white sm:dark:bg-typographyDark sm:shadow bg-white dark:bg-typographyDark shadow print:shadow-none print:bg-transparent;
+  @apply fixed print:relative w-full z-10 top-0 sm:bg-white sm:shadow bg-white shadow print:shadow-none print:bg-transparent;
+
+  :global(body.dark) & {
+    @apply sm:bg-typographyDark bg-typographyDark;
+  }
 
   & :global(.wrapper) {
     @apply w-full md:max-w-3xl mx-auto flex flex-wrap flex-row items-center sm:flex-col sm:items-start justify-between mt-0 py-3 sm:px-4;
@@ -9,7 +13,11 @@
 
   & h1 {
     & a {
-      @apply text-typographyDark dark:text-white hover:text-primary text-base no-underline hover:no-underline font-extrabold text-xl;
+      @apply text-typographyDark hover:text-primary text-base no-underline hover:no-underline font-extrabold text-xl;
+
+      :global(body.dark) & {
+        @apply text-white;
+      }
     }
   }
 }
@@ -21,7 +29,11 @@
   width: 100%;
 
   &[value]::-webkit-progress-bar {
-    @apply bg-liteGray dark:bg-typographyLite;
+    @apply bg-liteGray;
+
+    :global(body.dark) & {
+      @apply bg-typographyLite;
+    }
   }
 
   &[value]::-webkit-progress-value {
