Remove styled-components from the resume

--- a/next/components/Layout/Footer/index.module.scss
+++ b/next/components/Layout/Footer/index.module.scss
@@ -1,8 +1,8 @@
 .footer {
-  @apply bg-white shadow print:hidden;
+  @apply bg-white text-typography shadow print:hidden;
 
   :global(body.dark) & {
-    @apply bg-typographyDark;
+    @apply bg-typographyDark text-white;
   }
 }
 
