Style fixes and what not

--- a/next/components/Post/index.module.scss
+++ b/next/components/Post/index.module.scss
@@ -79,6 +79,10 @@
 
     & *:not(pre) code {
       @apply bg-siteBackground break-words;
+
+      :global(body.dark) & {
+        @apply bg-black;
+      }
     }
   }
 
