Add jump link functionality to the read more links

--- a/next/components/Layout/Nav/index.module.scss
+++ b/next/components/Layout/Nav/index.module.scss
@@ -16,6 +16,12 @@
 
     :global(body.dark) & {
       @apply text-white;
+
+      &:hover,
+      &:active,
+      &:focus {
+        @apply text-primary;
+      }
     }
 
     &[aria-current='page'] {
