Style tweaks for the blog preview page

--- a/next/components/Embeds/GitHubFile/index.module.scss
+++ b/next/components/Embeds/GitHubFile/index.module.scss
@@ -22,4 +22,5 @@
 
 .expandButton {
   @apply bg-primary hover:bg-primaryLite text-white px-4 py-2 rounded font-sans;
+  @apply transition duration-200 ease-linear transition-colors;
 }
